
CHANGELOG.txt to track changes to the Omega theme.

##########################################################################################
##### Current Release: 7.x-3.0-beta3
##### Pending changes for Next Release
########################################################################################## 

7/18/11
=========
#1220198  - Reverting the equal height feature changes from yesterday. This feature is
now based on jQuery again but the code was rewritten. It is now based on a jQuery
library from Ben Alman. This should even work with expandable textareas / fieldsets
and basically everything else that might have an impact on the height of a single
now and basically everything else that might have an impact on the height of a single
element in a group.

7/17/11
=========
#1220198  - The equal height feature is now solely based on CSS. This might still not
be the perfect solution but the jQuery approach that we were using before proved to be
a dead end.

#1220950  - Fixed and minified RTL grid CSS files.

7/09/11
=========
#1214048  - Omega no longer abuses the variables table for the caching. Instead we are
now using cache_set and cache_get.

#1213176  - Fixed the theme settings in the starterkits. The global.css file is now active
by default.

##########################################################################################
##### Changes in: 7.x-3.0-beta2
########################################################################################## 

6/29/11
=========
#1204254  - Removed mobile.css and style.css in favor of one single global.css.

6/28/11
=========
#1202708  - Fix inline display of field labels.

##########################################################################################
##### Changes in: 7.x-3.0-beta1
########################################################################################## 

6/27/11
=========
#1200272  - Fixed a bug that was incorrectly assuming that all regions are part of a zone.
