@@ -1,3 +1,0 @@
-.equal-height-element {
-  height: auto !important;
-}
